--- a/estilos/style.css
+++ b/estilos/style.css
@@ -38,3 +38,20 @@ iframe#redes{
     width: 267px;
     height: 472px;
 }
+section#redes-sociais{
+    text-align: right;
+}
+
+section#redes-sociais img{
+    border-radius: 60%;
+    width: 60px;
+    margin: 5px;
+    box-sizing: border-box;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.76);
+}
+
+section#redes-sociais img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.671);
+    transform: translate(-2px, -2px);
+    transition: transform 0.3s;
+}
